--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
+Chuks Stephen <stephenchuks@my.uopeople.edu>
 Chepngenoh Mercy < Mercynenoh(4@gmail.com >
-Chucks Stephen < stephenchuks@my.uopeople.edu >
